# Automake configuration file for hpx/src

AUTOMAKE_OPTIONS = foreign
lib_LIBRARIES = libhpx.a

libhpx_a_SOURCES =                                            \
#    components/factory.cpp                                    \
#    components/graph.cpp                                      \
#    components/local_graph.cpp                                \
#    components/accumulator.cpp                                \
#    components/vertex.cpp                                     \
    util/io_service_pool.cpp                                  \
#    core/px.cpp                                               \
    parcelset/parcelport.cpp                                  \
    parcelset/parcel.cpp                                      \
    parcelset/server/parcel_queue.cpp                         \
#    threadmanager/threadmanager.cpp                           \
    naming/resolver_server.cpp                                \
    naming/resolver_client.cpp                                \
    naming/server/request_handler.cpp                         \
\
#    $(top_builddir)/external/coroutine/libs/coroutine/src/swapcontext.cpp \
\
    $(top_builddir)/hpx/components.hpp                        \
    $(top_builddir)/hpx/config.hpp                            \
    $(top_builddir)/hpx/core.hpp                              \
    $(top_builddir)/hpx/hpx.hpp                               \
    $(top_builddir)/hpx/distpx_fwd.hpp                        \
    $(top_builddir)/hpx/exception.hpp                         \
    $(top_builddir)/hpx/naming.hpp                            \
    $(top_builddir)/hpx/parcelset.hpp                         \
    $(top_builddir)/hpx/threadmanager.hpp                     \
    $(top_builddir)/hpx/util.hpp                              \
    $(top_builddir)/hpx/components/accumulator.hpp            \
    $(top_builddir)/hpx/components/action.hpp                 \
    $(top_builddir)/hpx/components/action_serialization.hpp   \
    $(top_builddir)/hpx/components/component.hpp              \
    $(top_builddir)/hpx/components/component_type.hpp         \
    $(top_builddir)/hpx/components/factory.hpp                \
    $(top_builddir)/hpx/components/graph.hpp                  \
    $(top_builddir)/hpx/components/local_graph.hpp            \
    $(top_builddir)/hpx/components/detail/local_graph.hpp     \
    $(top_builddir)/hpx/components/detail/component_impl.hpp  \
    $(top_builddir)/hpx/components/vertex.hpp                 \
    $(top_builddir)/hpx/core/px.hpp                           \
    $(top_builddir)/hpx/core/px_thread.hpp                    \
    $(top_builddir)/hpx/naming/address.hpp                    \
    $(top_builddir)/hpx/naming/locality.hpp                   \
    $(top_builddir)/hpx/naming/name.hpp                       \
    $(top_builddir)/hpx/naming/resolver.hpp                   \
    $(top_builddir)/hpx/naming/resolver_client.hpp            \
    $(top_builddir)/hpx/naming/resolver_client.hpp            \
    $(top_builddir)/hpx/naming/server/connection.hpp          \
    $(top_builddir)/hpx/naming/server/reply.hpp               \
    $(top_builddir)/hpx/naming/server/request.hpp             \
    $(top_builddir)/hpx/naming/server/request_handler.hpp     \
    $(top_builddir)/hpx/naming/server/request_parser.hpp      \
    $(top_builddir)/hpx/parcelset/parcel.hpp                  \
    $(top_builddir)/hpx/parcelset/parcelset.hpp               \
    $(top_builddir)/hpx/parcelset/server/parcel_connection.hpp \
    $(top_builddir)/hpx/parcelset/server/parcel_queue.hpp     \
    $(top_builddir)/hpx/threadmanager/threadmanager.hpp       \
    $(top_builddir)/hpx/util/comparable.hpp                   \
    $(top_builddir)/hpx/util/container_device.hpp             \
    $(top_builddir)/hpx/util/debug.hpp                        \
    $(top_builddir)/hpx/util/generate_unique_ids.hpp          \
    $(top_builddir)/hpx/util/io_service_pool.hpp              \
    $(top_builddir)/hpx/util/portable_binary_iarchive.hpp     \
    $(top_builddir)/hpx/util/portable_binary_oarchive.hpp     \
    $(top_builddir)/hpx/util/util.hpp                      

