# Copyright (c) 2007-2008 Richard D Guidry Jr
#
# Distributed under the Boost Software License, Version 1.0. (See accompanying 
# file LICENSE_1_0.txt or copy at http://www.boost.org/LICENSE_1_0.txt)

# Automake configuration file for hpx/src

AUTOMAKE_OPTIONS = foreign
lib_LIBRARIES = libhpx.a

libhpx_a_SOURCES =                                       \
	util/io_service_pool.cpp                             \
	util/logging.cpp                                     \
	runtime/parcelset/parcelport.cpp                     \
	runtime/parcelset/parcelhandler.cpp                  \
	runtime/parcelset/parcel.cpp                         \
	runtime/parcelset/connection_cache.cpp               \
	runtime/parcelset/server/parcelport_queue.cpp        \
	runtime/parcelset/server/parcelhandler_queue.cpp     \
	runtime/naming/resolver_server.cpp                   \
	runtime/naming/resolver_client.cpp                   \
	runtime/naming/server/request_handler.cpp            \
	runtime/threadmanager/threadmanager.cpp              \
	runtime/action_manager/action_manager.cpp            \
	components/server/accumulator.cpp                    \
	components/server/factory.cpp                        \
	$(top_builddir)/hpx/config.hpp      \
	$(top_builddir)/hpx/hpx.hpp      \
	$(top_builddir)/hpx/hpx_fwd.hpp      \
	$(top_builddir)/hpx/exception.hpp      \
	$(top_builddir)/hpx/util/portable_binary_iarchive.hpp      \
	$(top_builddir)/hpx/util/asio_util.hpp      \
	$(top_builddir)/hpx/util/logging.hpp      \
	$(top_builddir)/hpx/util/safe_bool.hpp      \
	$(top_builddir)/hpx/util/one_size_heap_list.hpp      \
	$(top_builddir)/hpx/util/future.hpp      \
	$(top_builddir)/hpx/util/high_resolution_timer.hpp      \
	$(top_builddir)/hpx/util/serialize_sequence.hpp      \
	$(top_builddir)/hpx/util/io_service_pool.hpp      \
	$(top_builddir)/hpx/util/util.hpp      \
	$(top_builddir)/hpx/util/one_size_heap.hpp      \
	$(top_builddir)/hpx/util/portable_binary_oarchive.hpp      \
	$(top_builddir)/hpx/util/generate_unique_ids.hpp      \
	$(top_builddir)/hpx/util/container_device.hpp      \
	$(top_builddir)/hpx/components/component_type.hpp      \
	$(top_builddir)/hpx/components/server/accumulator.hpp      \
	$(top_builddir)/hpx/components/server/manage_component.hpp      \
	$(top_builddir)/hpx/components/server/manage_component_implementations.hpp \
	$(top_builddir)/hpx/components/server/factory.hpp      \
	$(top_builddir)/hpx/components/action_constructors.hpp      \
	$(top_builddir)/hpx/components/accumulator.hpp      \
	$(top_builddir)/hpx/components/stubs/accumulator.hpp      \
	$(top_builddir)/hpx/components/stubs/factory.hpp      \
	$(top_builddir)/hpx/components/action.hpp      \
	$(top_builddir)/hpx/components/action_implementations.hpp      \
	$(top_builddir)/hpx/components/factory.hpp      \
	$(top_builddir)/hpx/runtime/action_manager
	$(top_builddir)/hpx/runtime/action_manager/action_manager.hpp      \
	$(top_builddir)/hpx/runtime/threadmanager/px_thread.hpp      \
	$(top_builddir)/hpx/runtime/threadmanager/threadmanager.hpp      \
	$(top_builddir)/hpx/runtime/applier/applier_implementations.hpp      \
	$(top_builddir)/hpx/runtime/applier/applier.hpp      \
	$(top_builddir)/hpx/runtime/naming/name.hpp      \
	$(top_builddir)/hpx/runtime/naming/locality.hpp      \
	$(top_builddir)/hpx/runtime/naming/server/request_handler.hpp      \
	$(top_builddir)/hpx/runtime/naming/server/reply.hpp      \
	$(top_builddir)/hpx/runtime/naming/server/request.hpp      \
	$(top_builddir)/hpx/runtime/naming/server/connection.hpp      \
	$(top_builddir)/hpx/runtime/naming/resolver_client_connection.hpp      \
	$(top_builddir)/hpx/runtime/naming/resolver_server.hpp      \
	$(top_builddir)/hpx/runtime/naming/resolver_client.hpp      \
	$(top_builddir)/hpx/runtime/naming/address.hpp      \
	$(top_builddir)/hpx/runtime/runtime.hpp      \
	$(top_builddir)/hpx/runtime/parcelset/parcelport.hpp      \
	$(top_builddir)/hpx/runtime/parcelset/server/parcelport_queue.hpp      \
	$(top_builddir)/hpx/runtime/parcelset/server/parcelport_server_connection.hpp      \
	$(top_builddir)/hpx/runtime/parcelset/server/parcelhandler_queue.hpp      \
	$(top_builddir)/hpx/runtime/parcelset/parcelport_connection.hpp      \
	$(top_builddir)/hpx/runtime/parcelset/parcelhandler.hpp      \
	$(top_builddir)/hpx/runtime/parcelset/connection_cache.hpp      \
	$(top_builddir)/hpx/runtime/parcelset/parcel.hpp      \
	$(top_builddir)/hpx/include/parcelset.hpp      \
	$(top_builddir)/hpx/include/components.hpp      \
	$(top_builddir)/hpx/include/applier.hpp      \
	$(top_builddir)/hpx/include/action_manager.hpp      \
	$(top_builddir)/hpx/include/runtime.hpp      \
	$(top_builddir)/hpx/include/util.hpp      \
	$(top_builddir)/hpx/include/threadmanager.hpp      \
	$(top_builddir)/hpx/include/naming.hpp           
